home referente al desarrollo quetzal proyecto compi 2 usac diciembre

--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+
+    <div class="msg">Desarrollando Interprete <b>Quetzal</b><br/> Usac DIC-2021 </div>
+    <div id="console">
+</div>
+
+<script src="js/index.js"></script>
 </body>
+<footer><a href="https://codepen.io/sreeramsupers/pen/poWJxRP">Credito: CodePen</a></footer>
 </html>
