--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <li class="nav-item">Quetzal Compiler</li>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://github.com/jamesg19">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"></a></li>
+                    
                 </ul>
             </div>
         </div>
